# AudioVisualizer

./: .gitignore  CMakeLists.txt
src/: main.cpp  main.h
src/AudioTypes/: audio.cpp  audio.h
src/AudioTypes/WAV/: wav.cpp  wav.h
